# Sivflow

./: .dockerignore  .env  .env.development  .env.example  .firebaserc  .gitattributes  .gitignore  .lint-report.json  .lint.json  .npmrc  .tmp-typecheck.txt  AGENTS.md  C  CLAUDE.md  CalendarWorkspaceToolbar-snippet.tsx  Dockerfile.cloudrun  MANIFEST.json  OCR_CONTINUATION_APPLY.md  OCR_FEATURES_APPLY.md  README.md  README.txt  README_APPLY.md  TODO.md  WORLDLINE_UNIFY_CHECKLIST.md  WorkspaceTabPanel.tsx  all_ts_files.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_test.txt  build_log_v10.txt  build_log_v11.txt  build_log_v12.txt  build_log_v13.txt  build_log_v14.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  (+51 more)
.claude/: ignore  instructions.md  settings.json  settings.local.json
.firebase/: hosting.ZGlzdA.cache
.github/: dependabt.yml
.playwright-cli/: page-2026-06-09T07-15-08-549Z.yml  page-2026-07-01T11-59-27-361Z.yml
_notes/: README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
blocksuite/: tsconfig.tsbuildinfo
chatgpt-approval-hub/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
config/: build.ts
constants/: index.ts
dist_final_check/: index.html  sw.js
dist_test/: index.html
docs/: API_Documentation.md  GEMINI.md  Katex.md  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+5540 files in other folders)
