[package]
name = "manifolia"
version = "0.0.0"
description = "Manifolia desktop app"
authors = ["akari221"]
edition = "2021"

[lib]
name = "manifolia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.2", features = [] }
url = "2.5.7"
webbrowser = "1.0.6"
