[package]
name = "sivflow"
version = "0.0.0"
description = "Sivflow desktop app"
authors = ["Tapi221"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
keyring = "3.6.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.1", features = [] }
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.7"
webbrowser = "1.0.6"
